# gd32vf103-rust

./: .gitignore  .gitmodules  Cargo.toml  do-objcopy.ps1  memory.x
src/: lib.rs  main.rs
