[package]
name = "gd32vf103-test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.3"
riscv-rt = "0.6"
panic-halt = "0.2"
gd32vf103xx-hal = "0.3"

# this lets you use `cargo fix`!
[[bin]]
name = "gd32vf103-test"
test = false
bench = false
